--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hoppergeegee
 github_username:  hoppergee
+permalink: /:categories/:title
 
 # Build settings
 # theme: minima
