--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ permalink: /:categories/:title
 # theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
