Install jekyll-seo-tag

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ permalink: /:categories/:title
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
