--- a/_data/rest_man.yml
+++ b/_data/rest_man.yml
@@ -32,6 +32,7 @@ examples:
         http_version: HTTP/1.1
         http_headers:
           - "Host: example.com"
+          - "User-Agent: Mozilla/5.0"
         User-Agent: Mozilla/5.0
       response:
         http_version: HTTP/1.1
