--- a/_data/rest_man.yml
+++ b/_data/rest_man.yml
@@ -6,8 +6,10 @@ examples:
         request_target: /test
         http_version: HTTP/1.1
         http_headers:
-          - "Host: example.com"
           - "Accept: */*"
+          - "Accept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3"
+          - "Host: example.com"
+          - "User-Agent: Mozilla/5.0"
       response:
         http_version: HTTP/1.1
         status_code: 200
@@ -15,26 +17,56 @@ examples:
         http_headers:
           - "Content-Type: text/plain"
         http_body: Hello world!
-      code: 
-        request_code: 'response = RestMan.get "http://example.com"'
-        response_codes:
-          - code_call: response.status
-            code_output: 200
-          - code_call: response.headers
-            code_output: Hash
-          - code_call: response.headers[:content_type]
-            code_output: text/plain
-          - code_call: response.body
-            code_output: Hello world! 
+      codes: 
+        - tab: simple
+          request_code: 'response = RestMan.get "http://example.com/test"'
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: text/plain
+            - code_call: response.body
+              code_output: Hello world! 
+        - tab: advance
+          request_code: 'response = RestMan.execute(method: :get, url: "http://example.com/test")'
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: text/plain
+            - code_call: response.body
+              code_output: Hello world! 
+        - tab: console
+          request_code: |
+            $ restman http://example.com
+            irb(main)> response = get "/test"
+          response_codes:
+            - code_call: irb(main)> response.status
+              code_output: 200
+            - code_call: irb(main)> response.headers
+              code_output: Hash
+            - code_call: irb(main)> response.headers[:content_type]
+              code_output: text/plain
+            - code_call: irb(main)> response.body
+              code_output: Hello world! 
+        - tab: cli
+          request_code: "$ restman get http://example.com/test"
+          response_codes:
+            - code_call: Hello world!
 
     - request:
         http_method: GET
         request_target: /about
         http_version: HTTP/1.1
         http_headers:
+          - "Accept: */*"
+          - "Accept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3"
           - "Host: example.com"
           - "User-Agent: Mozilla/5.0"
-          - "Accept: */*"
       response:
         http_version: HTTP/1.1
         status_code: 200
@@ -43,32 +75,73 @@ examples:
           - "Content-Type: text/html"
         http_body: |
           <html>
-          <head><title>About Us</title></head>
+          <head>
+          <title>About Us</title></head>
           <body>
           ...
           </body>
           </html>
-      code: 
-        request_code: |
-          response = RestMan.get "http://example.com", headers: {"User-Agent" => "Mozilla/5.0"}
-        response_codes:
-          - code_call: response.status
-            code_output: 200
-          - code_call: response.headers
-            code_output: Hash
-          - code_call: response.headers[:content_type]
-            code_output: text/html
-          - code_call: response.body
-            code_output: <html> ...
+      codes: 
+        - tab: simple
+          request_code: |
+            response = RestMan.get "http://example.com/about", headers: {"User-Agent" => "Mozilla/5.0"}
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: text/html
+            - code_call: response.body
+              code_output: <html> ...
+        - tab: advance
+          request_code: |
+            response = RestMan.execute method: :get, url: "http://example.com/about", headers: {"User-Agent" => "Mozilla/5.0"}
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: text/html
+            - code_call: response.body
+              code_output: <html> ...
+        - tab: console
+          request_code: |
+            $ restman http://example.com
+            irb(main)> response = get "/about", headers: {"User-Agent" => "Mozilla/5.0"}
+          response_codes:
+            - code_call: irb(main)> response.status
+              code_output: 200
+            - code_call: irb(main)> response.headers
+              code_output: Hash
+            - code_call: irb(main)> response.headers[:content_type]
+              code_output: text/html
+            - code_call: irb(main)> response.body
+              code_output: <html> ...
+        - tab: cli
+          request_code: "$ restman get http://example.com/about"
+          response_codes:
+            - code_call: |
+                <html>
+                <head>
+                <title>About Us</title>
+                </head>
+                <body>
+                ...
+                </body>
+                </html>
 
     - request:
         http_method: GET
         request_target: /data
         http_version: HTTP/1.1
         http_headers:
-          - "User-Agent: rest-man/1.1.0 (darwin21 arm64) ruby/3.1.2p20"
           - "Accept: application/json"
+          - "Accept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3"
+          - "Host: example.com"
           - 'If-None-Match: e22d62c1'
+          - "User-Agent: rest-man/1.1.0 (darwin21 arm64) ruby/3.1.2p20"
       response:
         http_version: HTTP/1.1
         status_code: 200
@@ -81,18 +154,53 @@ examples:
             "name": "John Hill",
             "age": 30
           }
-      code: 
-        request_code: |
-          response = RestMan.get "http://example.com", headers: {accept: "application/json", etag: "e22d62c1"}
-        response_codes:
-          - code_call: response.status
-            code_output: 200
-          - code_call: response.headers
-            code_output: Hash
-          - code_call: response.headers[:content_type]
-            code_output: application/json
-          - code_call: response.headers[:etag]
-            code_output: "e22d62c1"
-          - code_call: response.body
-            code_output: |
-              { "name": ... }
+      codes: 
+        - tab: simple
+          request_code: |
+            response = RestMan.get "http://example.com/data", headers: {accept: "application/json", etag: "e22d62c1"}
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: application/json
+            - code_call: response.headers[:etag]
+              code_output: "e22d62c1"
+            - code_call: response.body
+              code_output: |
+                { "name": ... }
+        - tab: advance
+          request_code: |
+            response = RestMan.execute(method: :get, url: "http://example.com/data", headers: {accept: "application/json", etag: "e22d62c1"})
+          response_codes:
+            - code_call: response.status
+              code_output: 200
+            - code_call: response.headers
+              code_output: Hash
+            - code_call: response.headers[:content_type]
+              code_output: application/json
+            - code_call: response.headers[:etag]
+              code_output: "e22d62c1"
+            - code_call: response.body
+              code_output: |
+                { "name": ... }
+        - tab: console
+          request_code: |
+            $ restman http://example.com
+            irb(main)> response = get "/data", headers: {accept: "application/json", etag: "e22d62c1"}
+          response_codes:
+            - code_call: irb(main)> response.status
+              code_output: 200
+            - code_call: irb(main)> response.headers
+              code_output: Hash
+            - code_call: irb(main)> response.headers[:content_type]
+              code_output: application/json
+            - code_call: irb(main)> response.headers[:etag]
+              code_output: "e22d62c1"
+            - code_call: irb(main)> response.body
+              code_output: |
+                { "name": ... }
+        - tab: cli
+          request_code: RestMan CLI does not support customize headers currently.
+          response_codes:
